--- a/MLProject.ipynb
+++ b/MLProject.ipynb
@@ -40,6 +40,7 @@
     "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import cross_val_score"
+    "np.random.seed(3)"
    ]
   },
   {
