--- a/MLProject.ipynb
+++ b/MLProject.ipynb
@@ -39,7 +39,8 @@
     "import matplotlib.patches as mpatches\n",
     "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import cross_val_score"
+    "from sklearn.model_selection import cross_val_score\n",
+    "np.random.seed(3)"
    ]
   },
   {
